<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_color_label">Add Colors</string>
    <string name="add_label">Add</string>
    <string name="advanced_label">Advanced</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aod_always_label">Always</string>
    <string name="aod_brightness_label">Brightness</string>
    <string name="aod_charging_label">While Charging</string>
    <string name="aod_desc_sub_label">Shows on screen lock</string>
    <string name="aod_label">AOD</string>
    <string name="aod_lights_label">AOD Lights</string>
    <string name="aod_msg">Turn off the screen for AOD Mode</string>
    <string name="aod_msg_always">Turn off the screen to activate</string>
    <string name="aod_msg_charging">Turn off the screen &lt;b&gt;while charging&lt;/b&gt; to activate</string>
    <string name="aod_msg_charging_music">Turn off the screen &lt;b&gt;while charging&lt;/b&gt; or &lt;b&gt;music play&lt;/b&gt; to activate</string>
    <string name="aod_msg_music">Turn off the screen on &lt;b&gt;music play&lt;/b&gt; to activate</string>
    <string name="aod_music_label">AOD Music</string>
    <string name="aod_never_label">Never</string>
    <string name="aod_notify_label">AOD Notification</string>
    <string name="aod_on_music_label">On Music</string>
    <string name="aod_timeout_label">AOD Timeout</string>
    <string name="aod_title">Always On Display</string>
    <string name="app_conflict_msg">Outdated version of &lt;b&gt;Muviz Navbar&lt;/b&gt; is installed on your phone. Update the app or turn it off, for better experience.</string>
    <string name="app_name">Muviz Edge</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_label">Applied</string>
    <string name="apply_label">Apply</string>
    <string name="audio_access_label">Requires Audio Access</string>
    <string name="audio_notification_access_label">Requires Audio &amp; Notification Access</string>
    <string name="audio_state_idle">Idle</string>
    <string name="audio_state_paused">Paused on</string>
    <string name="audio_state_playing">Playing on</string>
    <string name="auto_album_color_label">Auto Apply Album Colors</string>
    <string name="auto_start_label">Auto Start</string>
    <string name="backgrounds_title">Backgrounds</string>
    <string name="battery_title">Battery</string>
    <string name="beta_label">BETA</string>
    <string name="bg_popup_permission_label">- Display pop-up windows while running in the background</string>
    <string name="bottom_label">Bottom</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="burn_in_desc">Pixel shifts AOD elements periodically</string>
    <string name="burn_in_label">Burn-in Protection</string>
    <string name="buy_error_msg">Something went wrong. Check your internet connection and try again.</string>
    <string name="buy_progress_msg">Billing is in progress. Check your Google Play purchase history for more details.</string>
    <string name="calendar_title">Calendar</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_label">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_update_label">Check for Update</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_on_label">Close on</string>
    <string name="collections_tab_title">Collections</string>
    <string name="color_removed_msg">Color removed</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contact_label">Contact Support</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="default_web_client_id">261879043590-r5lsn3djihqcqu101aukttmmomu7qlgk.apps.googleusercontent.com</string>
    <string name="define_screen_label">Define Screen Edges</string>
    <string name="delete_label">Delete</string>
    <string name="design_bars_around">Bars Around</string>
    <string name="design_bubble_particles">Bubble Particles</string>
    <string name="design_chase_around">Chase Around</string>
    <string name="design_corner_out">Corner Out</string>
    <string name="design_dot_particles">Dot Particles</string>
    <string name="design_fire_dance">Fire Dance</string>
    <string name="design_flat_bars">Flat Bars</string>
    <string name="design_flat_flutter">Flat Flutter</string>
    <string name="design_flat_ripples">Flat Ripples</string>
    <string name="design_flat_streaks">Flat Streaks</string>
    <string name="design_flat_waves">Flat Waves</string>
    <string name="design_lights_around">Lights Around</string>
    <string name="design_mirror_lines">Mirror Rain</string>
    <string name="disable_on_power_save_label">Disable on Battery Saver</string>
    <string name="dont_show_again_label">"Don't show again"</string>
    <string name="edge_desc_sub_label">Shows around screen edges</string>
    <string name="edge_title">Edge Lighting</string>
    <string name="hide_after_label">Hide after</string>
    <string name="notification_access_label">Requires Notification Access</string>
    <string name="only_media_apps_label">Use Audio only from Media Apps</string>
    <string name="overlay_label">Music Overlay</string>
    <string name="random_mode_desc">"This music app doesn't provide necessary audio fx data to visualize the music. Switched to random visualizer."</string>
    <string name="random_mode_header">Muviz Edge in Random Mode</string>
    <string name="random_mode_label">Random Mode</string>
    <string name="random_mode_sub_label">Shows random viz on unsupported audio</string>
    <string name="screen_roundness_sub_label">For displays with rounded corners</string>
    <string name="settings_label">Settings</string>
    <string name="show_edge_label">Show on</string>
    <string name="show_music_controls_label">Show Music Controls</string>
    <string name="show_now_playing_label">Precise Controls &amp; Details</string>
    <string name="turn_off_random_label">Turn off Random</string>
    <string name="adaptive_entry_title">Display &amp; language</string>
    <string name="adaptive_entry_subtitle">Device mode, display size and language</string>
    <string name="adaptive_text_12">Connect with Us</string>
    <string name="adaptive_text_14">Explore Matching Watchfaces</string>
    <string name="adaptive_text_15">For your Wear OS 6+ Watch</string>
    <string name="adaptive_text_20">New AOD designs are in the works</string>
    <string name="adaptive_text_21">Follow us for upcoming updates, inspirations and feedback.</string>
</resources>