<?xml version='1.0' encoding='utf-8'?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@id/follow_lt" android:padding="20.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@color/liteBluishGray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="25.0dip" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/accent_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adaptive_text_20" android:letterSpacing="0.02" />
        <TextView android:textSize="14.0sp" android:textColor="@color/whitish_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/adaptive_text_21" />
        <com.google.android.material.button.MaterialButton android:textSize="12.5sp" android:textColor="@color/accent_blue" android:layout_gravity="end" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginTop="15.0dip" android:text="@string/adaptive_text_12" android:onClick="followUs" android:textAllCaps="false" android:letterSpacing="0.02" app:cornerRadius="40.0dip" app:strokeColor="@color/accent_blue" style="?materialButtonOutlinedStyle" />
        <View android:background="@color/liteBluishGray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="25.0dip" />
    </LinearLayout>
    <LinearLayout android:id="@id/mwf_lt" android:background="@drawable/rounded_corners" android:padding="15.0dip" android:visibility="invisible" android:layout_marginTop="25.0dip" android:layout_marginBottom="35.0dip" android:foreground="?android:selectableItemBackground" android:onClick="openWearAppOnStore" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" android:backgroundTint="@color/liteBluishGray" style="@style/settingsParent">
        <LinearLayout android:layout_marginStart="10.0dip" style="@style/settingsTextGroup">
            <TextView android:textSize="16.5sp" android:textStyle="bold" android:textColor="@color/accent_blue" android:text="@string/adaptive_text_14" style="@style/settingsText" />
            <TextView android:textSize="13.0sp" android:textColor="@color/whitish_gray" android:id="@id/mwf_sub_tv" android:text="@string/adaptive_text_15" style="@style/settingsSubText" />
        </LinearLayout>
        <ImageView app:tint="@color/whitish_gray" style="@style/settingsForwardIcon" />
    </LinearLayout>
</LinearLayout>