<?xml version="1.0" encoding="utf-8"?>
<com.sparkine.muvizedge.view.OverlayLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/random_mode_layout" android:background="@color/bluishGray" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/warning" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/random_mode_header" android:textAllCaps="true" />
            <TextView android:textSize="13.0sp" android:textColor="@color/white" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/random_mode_desc" />
        </LinearLayout>
        <LinearLayout android:gravity="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <Button android:textColor="@color/white" android:ellipsize="end" android:id="@id/dont_show_random" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dont_show_again_label" android:singleLine="true" android:textAllCaps="false" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" android:layout_marginEnd="5.0dip" android:backgroundTint="@color/liteBluishGray" />
            <Button android:textColor="@color/white" android:ellipsize="middle" android:id="@id/turn_off_random" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/turn_off_random_label" android:singleLine="true" android:textAllCaps="false" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" android:backgroundTint="@color/liteBluishGray" />
        </LinearLayout>
    </LinearLayout>
</com.sparkine.muvizedge.view.OverlayLayout>
