<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/now_playing_lt" style="@style/settingsParent">
            <LinearLayout style="@style/settingsTextGroup">
                <TextView android:text="@string/show_now_playing_label" style="@style/settingsText" />
                <TextView android:textColor="@color/warning" android:text="@string/notification_access_label" style="@style/settingsSubText" />
            </LinearLayout>
            <ImageView style="@style/settingsForwardIcon" />
        </LinearLayout>
        <LinearLayout android:id="@id/show_controls_lt" android:visibility="gone" style="@style/settingsParent">
            <LinearLayout style="@style/settingsTextGroup">
                <TextView android:text="@string/show_music_controls_label" style="@style/settingsText" />
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat android:id="@id/show_controls_switch" style="@style/settingsAction" />
        </LinearLayout>
        <View style="@style/settingsSeparator" />
        <LinearLayout android:orientation="vertical" style="@style/settingsParent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/hide_after_label" style="@style/settingsText" />
                <TextView android:textSize="14.0sp" android:textColor="@color/gray" android:gravity="end" android:id="@id/controls_timeout_val" android:layout_width="0.0dip" android:layout_weight="1.0" style="@style/settingsText" />
            </LinearLayout>
            <SeekBar android:theme="@style/BigThumbSeekBar" android:id="@id/controls_timeout_seek" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" />
        </LinearLayout>
        <View style="@style/settingsSeparator" />
    </LinearLayout>
</ScrollView>
